--- a/chat.css
+++ b/chat.css
@@ -74,6 +74,7 @@ body {
     padding: .4em .2em;
     padding-top: 0;
     position: relative;
+    filter: grayscale(100%)	/* if you don't want emotes in black & white you can remove this line */
 }
 
 #log .emote img {
@@ -142,6 +143,6 @@ body {
     top: -0.1em;
     image-rendering: pixelated;
     border-radius: 3px;
-    filter: grayscale(100%)
+    filter: grayscale(100%)	/* if you don't want emotes in black & white you can remove this line */
 }
 
